--- a/Controls/ProfileHoverPointValues.xaml
+++ b/Controls/ProfileHoverPointValues.xaml
@@ -1,4 +1,4 @@
-﻿<controls:PointValuesControl
+﻿<controls:TrackPointValuesControl
     x:Class="cycloid.Controls.ProfileHoverPointValues"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -56,4 +56,4 @@
 
     </controls:MapControlBorder>
 
-</controls:PointValuesControl>
+</controls:TrackPointValuesControl>
