--- a/Controls/Compass.xaml
+++ b/Controls/Compass.xaml
@@ -1,4 +1,4 @@
-﻿<controls:PointControl
+﻿<controls:TrackPointControl
     x:Class="cycloid.Controls.Compass"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,7 +15,7 @@
                 ui:VisualExtensions.CenterPoint="40,40,0"
                 ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToRootAngle(Heading)}">
                 <animations:Implicit.Animations>
-                    <animations:RotationInDegreesAnimation Duration="0:0:1" />
+                    <animations:RotationInDegreesAnimation Duration="0:0:0.5" />
                 </animations:Implicit.Animations>
                 <Grid.Resources>
                     <Style TargetType="Ellipse">
@@ -105,7 +105,7 @@
                     ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToNeedleAngle(Point.Heading)}"
                     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(Point)}">
                     <animations:Implicit.Animations>
-                        <animations:RotationInDegreesAnimation Duration="0:0:1" />
+                        <animations:RotationInDegreesAnimation Duration="0:0:0.5" />
                     </animations:Implicit.Animations>
                     <Polygon
                         Canvas.Left="40"
@@ -118,4 +118,4 @@
 
     </controls:MapControlBorder>
 
-</controls:PointControl>
+</controls:TrackPointControl>
