--- a/Controls/MapCurrentPointValues.xaml
+++ b/Controls/MapCurrentPointValues.xaml
@@ -1,4 +1,4 @@
-﻿<controls:PointValuesControl
+﻿<controls:TrackPointValuesControl
     x:Class="cycloid.Controls.MapCurrentPointValues"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -93,4 +93,4 @@
 
     </controls:MapControlBorder>
 
-</controls:PointValuesControl>
+</controls:TrackPointValuesControl>
