--- a/Controls/StreetView.xaml
+++ b/Controls/StreetView.xaml
@@ -1,4 +1,4 @@
-﻿<controls:PointControl
+﻿<controls:TrackPointControl
     x:Class="cycloid.Controls.StreetView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,11 +11,11 @@
     xmlns:ui="using:CommunityToolkit.WinUI"
     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(Point)}">
 
-    <controls:PointControl.Resources>
+    <controls:TrackPointControl.Resources>
         <labs:TransitionHelper x:Key="Transition">
             <labs:TransitionConfig Id="root" ScaleMode="Scale" />
         </labs:TransitionHelper>
-    </controls:PointControl.Resources>
+    </controls:TrackPointControl.Resources>
 
     <interactivity:Interaction.Behaviors>
         <behaviors:DragableBehavior x:Name="DragableBehavior" IsEnabled="False" />
@@ -111,4 +111,4 @@
 
     </Grid>
 
-</controls:PointControl>
+</controls:TrackPointControl>
