--- a/Controls/Map.xaml
+++ b/Controls/Map.xaml
@@ -10,9 +10,6 @@
 
     <controls:ViewModelControl.Resources>
 
-        <x:Boolean x:Key="True">True</x:Boolean>
-        <x:Boolean x:Key="False">False</x:Boolean>
-        
         <Style
             x:Key="LocationMenuItemStyle"
             BasedOn="{StaticResource DefaultMenuFlyoutItemStyle}"
@@ -62,13 +59,8 @@
             <MenuFlyoutItem IsEnabled="False" Text="Add forbidden area (NYI)" />
             <MenuFlyoutSeparator />
             <MenuFlyoutItem
-                Command="{x:Bind Mode=OneTime, Path=ViewModel.PasteWayPointsAtStartCommand}"
-                CommandParameter="{StaticResource False}"
-                Text="Paste waypoints at start" />
-            <MenuFlyoutItem
-                Command="{x:Bind Mode=OneTime, Path=ViewModel.PasteWayPointsAtStartCommand}"
-                CommandParameter="{StaticResource True}"
-                Text="Paste waypoints reversed at start" />
+                Command="{x:Bind Mode=OneTime, Path=ViewModel.PasteWayPointsCommand}"
+                Text="Paste waypoints" />
         </controls:MapMenuFlyout>
         <controls:MapMenuFlyout x:Name="MapEditPointMenu">
             <MenuFlyoutItem Command="{x:Bind Mode=OneTime, Path=ViewModel.DeleteWayPointCommand}" Text="Delete waypoint" />
@@ -86,12 +78,7 @@
             <MenuFlyoutSeparator />
             <MenuFlyoutItem
                 Command="{x:Bind Mode=OneTime, Path=ViewModel.PasteWayPointsCommand}"
-                CommandParameter="{StaticResource False}"
                 Text="Paste waypoints" />
-            <MenuFlyoutItem
-                Command="{x:Bind Mode=OneTime, Path=ViewModel.PasteWayPointsCommand}"
-                CommandParameter="{StaticResource True}"
-                Text="Paste waypoints reversed" />
         </controls:MapMenuFlyout>
         <controls:MapMenuFlyout x:Name="MapEditSectionMenu">
             <MenuFlyoutItem
